@@ -1,6 +1,6 @@
 Package: Calculus
 ----------------
-The Calculus package is an all-Tcl package that implements 
+The Calculus package is an all-Tcl package that implements
 several basic numerical algorithms, such as the integration
 of functions of one variable or the integration of ordinary
 differential equations.
@@ -12,10 +12,7 @@ calculus.tcl   - The source code for the package
 calculus.test  - Several simple tests
 calculus.html  - Documentation of the package
 
-The current version is: 0.2, the first public release, november 2001
-
-This package is available from the Tcl archive at:
-   http://www.neosoft.com/tcl
+The current version is: 0.3, the first public release, march 2002
 
 Please contact Arjen Markus (arjen.markus@wldelft.nl) for questions,
 bug reports, enhancements and so on.
