@@ -1,5 +1,7 @@
 2002-03-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
 
+	* math: Update of calculus. #528434
+
 	* report, struct (matrix): Fixed bug #530207.
 
 2002-03-14  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
